@@ -5,13 +5,13 @@ class Customer {
     private int customerID;
     private String name;
     private LinkedList<Shipment> shipmentHistory;
-    private Stack<Shipment> shipmentStack;
+    private LinkedList<Shipment> shipmentLinkedList;
 
     public Customer(int customerID, String name) {
         this.customerID = customerID;
         this.name = name;
         this.shipmentHistory = new LinkedList<>();
-        this.shipmentStack = new Stack<>();
+        this.shipmentLinkedList = new LinkedList<>();
     }
 
     public int getCustomerID() {
@@ -26,19 +26,27 @@ class Customer {
         return shipmentHistory;
     }
 
-    public Stack<Shipment> getShipmentStack() {
-        return shipmentStack;
+    public LinkedList<Shipment> getShipmentStack() {
+        return shipmentLinkedList;
     }
 
-    public void addShipment(Shipment shipment) {
+    public void addShipment(Shipment shipment, CustomerManagementApp app) {
+        // Gönderiyi tarih sırasına göre gönderi geçmişine ekliyoruz
         int index = 0;
         while (index < shipmentHistory.size() && shipmentHistory.get(index).getDate().compareTo(shipment.getDate()) < 0) {
             index++;
         }
-        shipmentHistory.add(index, shipment);
-        shipmentStack.push(shipment);
-        if (shipmentStack.size() > 5) {
-            shipmentStack.remove(0);
+        shipmentHistory.add(index, shipment); // Tarihe göre ekleme
+
+        // Gönderiyi stack'e ekliyoruz (LinkedList)
+        shipmentLinkedList.add(shipment);
+
+        // Eğer stack'teki gönderi sayısı 5'i geçtiyse, en eski gönderiyi çıkarıyoruz
+        if (shipmentLinkedList.size() > 5) {
+            shipmentLinkedList.removeFirst(); // İlk öğeyi çıkarıyoruz (FIFO mantığı)
         }
+
+        // Her gönderi eklendiğinde, global stack'e de eklenmesi sağlanıyor
+        app.addShipmentToGlobalStack(shipment);
     }
 }
